# stepannaumov.me

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml  justfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: fly.yml
crates/wasm_animation/: Cargo.toml
crates/wasm_animation/src/: camera.rs  demo.rs  main.rs
posts/: first.md  second.md
src/: blog.rs  main.rs
templates/: base.html  index.html  post.html  posts.html
