[workspace]
members = ["crates/*"]

[package]
name = "stepannaumov"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.7.4", features = ["macros"] }
notify = "6.1.1"
walkdir = "2.5.0"
pulldown-cmark = "0.10.3"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tera = "1.19.1"
serde_yaml = "0.9.34"
serde = { version = "1.0.201", features = ["derive"]}