[package]
name = "wasm_animation"
version = "0.1.0"
authors = ["Stepan Naumov <s.s.naumov@gmail.com>"]
edition = "2021"


[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["wayland", "bevy_core_pipeline", "bevy_sprite", "tonemapping_luts", "webgl2"] }
wasm-bindgen = "0.2.92"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
